axum-macros/tests/from_request/fail/generic_without_via.stderr
error: #[derive(FromRequest)] only supports generics when used with #[from_request(via)]
 --> tests/from_request/fail/generic_without_via.rs:5:18
  |
5 | struct Extractor<T>(T);
  |                  ^

error[E0277]: the trait bound `fn(Extractor<()>) -> impl Future<Output = ()> {foo}: Handler<_, _>` is not satisfied
  --> tests/from_request/fail/generic_without_via.rs:10:44
   |
10 |     _ = Router::<()>::new().route("/", get(foo));
   |                                        --- ^^^ the trait `Handler<_, _>` is not implemented for fn item `fn(Extractor<()>) -> impl Future<Output = ()> {foo}`
   |                                        |
   |                                        required by a bound introduced by this call
   |
   = note: Consider using `#[axum::debug_handler]` to improve the error message
   = help: the following other types implement trait `Handler<T, S>`:
             `Layered<L, H, T, S>` implements `Handler<T, S>`
             `MethodRouter<S>` implements `Handler<(), S>`
note: required by a bound in `axum::routing::get`
  --> $WORKSPACE/axum/src/routing/method_routing.rs
   |
   | top_level_handler_fn!(get, GET);
   | ^^^^^^^^^^^^^^^^^^^^^^---^^^^^^
   | |                     |
   | |                     required by a bound in this function
   | required by this bound in `get`
   = note: this error originates in the macro `top_level_handler_fn` (in Nightly builds, run with -Z macro-backtrace for more info)
